--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tailwind-reusable-repo",
+  "name": "auto-website-fe-base",
   "private": true,
   "version": "0.0.0",
   "type": "module",
